welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:6: error: object java.awt.Color is not a value
    	if(getCouleurSol()==Color){
                            ^